[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xtts-api-server"
version = "0.3.2"
authors = [
  { name="daswer123", email="daswerq123@gmail.com" },
]
description = "A simple FastAPI server to host XTTSv2"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "fastapi>=0.104.1",
  "loguru",
  "pydantic",
  "python-dotenv",
  "torch",
  "torchaudio",
  "uvicorn",
  "cutlet",
  'fugashi[unidic-lite]',
  'tts>=0.2.1',
]

[project.urls]
Homepage = "https://github.com/daswer123/xttsv2-api-server"
"Bug Tracker" = "https://github.com/daswer123/xttsv2-api-server/issues"

[tool.hatch.build.targets.wheel]
only-include=["xtts_api_server"]